<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_default"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="96sp"
        app:layout_constraintBottom_toTopOf="@id/btn_next_player"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_next_player"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="#00FFFFFF"
        android:src="@drawable/ic_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/next_player" />

    <ImageButton
        android:id="@+id/btn_pause"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/pause_timer"
        android:src="@drawable/ic_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_next_player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>